fixed layout issues when resizing text

--- a/style1.css
+++ b/style1.css
@@ -39,10 +39,8 @@ body {
 
 #content {
 	float: left;
-	width: 650px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: 10px;
+	width: 640px;
+	padding-left: 10px;
 }
 
 #content p {
